--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,21 @@
 {
   "manifest_version": 3,
-  "name": "WifiGod",
-  "version": "1.0",
+  "name": "Wifi God",
+  "version": "2.0",
   "description": "A Chrome extension to fix wifi dns related issues",
   "permissions": ["nativeMessaging", "activeTab", "tabs"],
   "background": {
-    "scripts": ["background.js"]
+    "service_worker": "background.js"
   },
   "action": {
-    "default_popup": "popup.html"
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "icons/16.png",
+      "32": "icons/32.png"
+    }
+  },
+  "icons": {
+    "16": "icons/16.png",
+    "32": "icons/32.png"
   }
 }
